# DoomClone

./: CMakeLists.txt  main.c
include/: environment.h  player.h  window.h
src/: environment.c  window.c
